--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -44,227 +44,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-      "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
-      "metadata": {
-        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
-      "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "629435bd-6bfa-44de-91d9-3b2937713257",
-      "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
-      "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
-      "metadata": {
-        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to print the length of a string. (User input for the string)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
-      "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to check if a given string contains only alphabets."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
-      "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
-      "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
-      "metadata": {
-        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
-        "outputId": "7e14285a-2d6d-453a-bcb4-c4f6d32a4906",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
-        "s=\"abcdef\"\n",
-        "print(s.index(\"abc\"))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
-      "metadata": {
-        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
-        "outputId": "6a7c8d58-6ac8-45f9-c62a-c16621ca0ea9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello abhigna\n",
-            "HELLO ABHIGNA\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n",
-        "name=(\"Hello Abhigna\")\n",
-        "print(name.lower())\n",
-        "print(name.upper())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
-      "metadata": {
-        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
-        "outputId": "a9b18df8-e7ee-490c-c114-7f19f38185d5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the count from letter a: 3\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)\n",
-        "string=\"banana\"\n",
-        "c=string.count('a',1)\n",
-        "print('the count from letter a:',c)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
-      "metadata": {
-        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
-        "outputId": "2e9a27bd-9659-4fd8-82f7-1a5276f983b1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello,whats your name?abhi\n",
-            "helloabhigood morning\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)\n",
-        "name=input(\"hello,whats your name?\")\n",
-        "print(\"hello\"+name+\"good morning\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
-      "metadata": {
-        "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
-        "outputId": "366a9ba7-0496-437e-8ae8-80eac866e28f",
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "ab043fa9-349b-44e4-a1a1-5cebbb63d94c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -274,27 +58,86 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "15"
+              "int"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 24
         }
       ],
       "source": [
-        "# Write a Python program to take two numbers as input and print their sum.\n",
-        "a=5\n",
-        "b=10\n",
-        "a+b"
+        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
+        "x=10\n",
+        "type(x)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
-      "id": "0563b26c-0218-47b8-9035-98beb73b0931",
+      "execution_count": 25,
+      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "0563b26c-0218-47b8-9035-98beb73b0931",
-        "outputId": "70ee2ccc-20f9-4262-fde9-64479fef0207",
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "outputId": "d3c41ca9-b4e6-4000-b7f0-438439766eab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ],
+      "source": [
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "a+b+c"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+      "metadata": {
+        "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
+        "outputId": "52bf39ce-6a0a-439e-a1b1-c88a47b7297e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ],
+      "source": [
+        "# Write a Python program that checks and prints the type of a variable (e.g., int, float, str, etc.).\n",
+        "name=\"abhi\"\n",
+        "type(name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+      "metadata": {
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "outputId": "e38a5597-9715-4b18-8b72-68ee014a7364",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -304,17 +147,235 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter name:abhi\n",
-            "age:20\n",
-            "{'abhi'} {'20'}\n"
+            "20\n",
+            "0\n",
+            "100\n",
+            "1.0\n"
           ]
         }
       ],
       "source": [
-        "# Write a Python program to format and display a string containing the user's name and age. (User input required)\n",
-        "name=input(\"enter name:\")\n",
-        "age=input(\"age:\")\n",
-        "print({name},{age})\n"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "num1=10\n",
+        "num2=10\n",
+        "print(num1+num2)\n",
+        "print(num1-num2)\n",
+        "print(num1*num2)\n",
+        "print(num1/num2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+      "metadata": {
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "outputId": "38356030-4d0c-49bc-a48a-f01852f25bd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "123\n",
+            "123.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "x=\"123\"\n",
+        "integer_value=int(x)\n",
+        "float_value=float(x)\n",
+        "print(integer_value)\n",
+        "print(float_value)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+      "metadata": {
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+        "outputId": "c62b8afb-d53c-44ee-b9b9-2c2a121e77a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "h\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
+        "string=\"hello\"\n",
+        "print(string[0])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+      "metadata": {
+        "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
+        "outputId": "8b608e14-67bb-4347-d5ee-04173ca03634",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ],
+      "source": [
+        "# Write a Python program to print the length of a string. (User input for the string)\n",
+        "name=\"vaishu\"\n",
+        "len(name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+      "metadata": {
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+        "outputId": "f48740a3-f116-40e0-b6a8-133453b14116",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ],
+      "source": [
+        "# Write a Python program to check if a given string contains only alphabets.\n",
+        "name=\"abhi\"\n",
+        "str.isalpha(name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+      "metadata": {
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+        "outputId": "ca7e93df-b666-4002-e77e-d7f7b1a4e86e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "helloworld\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
+        "s1=\"hello\"\n",
+        "s2=\"world\"\n",
+        "s3=s1+\"\"+s2\n",
+        "print(s3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
+      "metadata": {
+        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
+      "metadata": {
+        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
+      "metadata": {
+        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
+      "metadata": {
+        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
+      "metadata": {
+        "id": "189296cf-77e6-4f48-b010-77458da5bc9d"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to take two numbers as input and print their sum."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0563b26c-0218-47b8-9035-98beb73b0931",
+      "metadata": {
+        "id": "0563b26c-0218-47b8-9035-98beb73b0931"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to format and display a string containing the user's name and age. (User input required)"
       ]
     },
     {
